Conditional deployment of Redis and Aurora

--- a/lib/albFiles/demo.html
+++ b/lib/albFiles/demo.html
@@ -4,7 +4,10 @@
     <title>Success! Served from ALB</title>
 </head>
 
-<body><iframe width="560" height="315" src="https://www.youtube.com/embed/Js21xKMFdww" frameborder="0"
+<body>
+    <h2>Instance is %EC2_INSTANCE_ID%</h2>
+    <h2>Region is %AWS_REGION%</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Js21xKMFdww" frameborder="0"
         allowfullscreen></iframe></body>
 
 </html>
